objects/Lead_Conversion_Map__c.object
<CustomObject>
    <fields>
        <fullName>Converted_AccountId__c</fullName>
        <label>Converted AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_ContactId__c</fullName>
        <label>Converted ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_OpportunityId__c</fullName>
        <label>Converted OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID_BU__c</fullName>
        <label>LeadID_BU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadID_CO__c</fullName>
        <label>LeadID_CO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Converted__c</fullName>
        <description>Time or Date Lead is converted</description>
        <inlineHelpText>Time or Date Lead is converted</inlineHelpText>
        <label>Date Converted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loopcomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>loopcomplete</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead_Conversion_Map</label>
    <listViews>
        <fullName>Todays_Mappings</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>NAME</columns>
        <columns>Time_Converted__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todays mappings</label>
    </listViews>
    <nameField>
        <label>Lead_Conversion_Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead_Conversion_Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>